[gd_scene load_steps=8 format=3 uid="uid://d1hlfcf0u0dd0"]

[ext_resource type="Script" path="res://Scripts/BattleManager.gd" id="1_svkjm"]
[ext_resource type="PackedScene" uid="uid://b7hn7pqk7rh8t" path="res://Scenes/Prefabs/UIContainer.tscn" id="2_gkg66"]
[ext_resource type="AudioStream" uid="uid://b0pwo8n1lag45" path="res://Audio/Songs/boss1-130bpm.wav" id="5_8ctp3"]
[ext_resource type="PackedScene" uid="uid://muu12hug5ib1" path="res://Scenes/Boss G.tscn" id="6_3shk1"]
[ext_resource type="AudioStream" uid="uid://b8f55lu5knkao" path="res://Audio/Songs/MetronomeTick.mp3" id="6_jn1fn"]
[ext_resource type="PackedScene" uid="uid://cbi05qfsjhskp" path="res://Scenes/ragnahilda.tscn" id="6_skhid"]
[ext_resource type="SpriteFrames" uid="uid://ctr2lotnfhvkj" path="res://Assets/Sprites/Protagonista/Animations/Ragnahilda_Idle.tres" id="8_opoqs"]

[node name="BaseBattle" type="Node2D"]
script = ExtResource("1_svkjm")
PlayMetronome = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Container" parent="UI" instance=ExtResource("2_gkg66")]

[node name="BattleSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8ctp3")

[node name="MetronomeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jn1fn")

[node name="BPM_TIMER" type="Timer" parent="."]

[node name="Boss G" parent="." instance=ExtResource("6_3shk1")]
position = Vector2(631, 258)
scale = Vector2(2, 2)

[node name="Ragnahilda" parent="." instance=ExtResource("6_skhid")]
position = Vector2(631, 488)
scale = Vector2(3, 3)
sprite_frames = ExtResource("8_opoqs")
frame = 0
frame_progress = 0.332353
PlayerBattlePosition = Vector2(560, 470)
TakeDamagePositionDelta = Vector2(0, 20)

[connection signal="attack_mode_changed" from="." to="UI/Container" method="_on_base_battle_attack_mode_changed"]
[connection signal="attack_mode_changed" from="." to="Boss G" method="_on_base_battle_attack_mode_changed"]
[connection signal="attack_mode_changed" from="." to="Ragnahilda" method="_on_base_battle_attack_mode_changed"]
[connection signal="timeout" from="BPM_TIMER" to="." method="BPM_Notification"]
